tests/syntax_error/generic_missing_comma_use.jou
class Foo[T1, T2]:
    pass

def foo() -> None:
    # TODO: error message is not great, it is trying to interpret this as an array
    f: Foo[int int]  # Error: expected an expression, got the 'int' keyword
